/**
 * 定义了依赖厂商的解压缩算法进行解压缩
 */
package nirvana.proto;

import "monad/rpc/protocol/command.proto";
option optimize_for = SPEED;

option java_package = "nirvana.hall.protocol.image";

option java_outer_classname = "FirmImageDecompressProto";
/* send request to image server */
message FirmImageDecompressRequest {
  extend monad.rpc.protocol.BaseCommand {
    optional FirmImageDecompressRequest cmd = 10001;
  }
  enum ImageDataType{
    FPT = 1;//fpt数据
    RAW = 2;//原始数据
  }
  required bytes cpr_data = 1;
  optional ImageDataType image_data_type = 2 [default = FPT];
}

/* response */
message FirmImageDecompressResponse {
  extend monad.rpc.protocol.BaseCommand {
    optional FirmImageDecompressResponse cmd = 10002;
  }
  optional bytes original_data = 1;
}
